--- a/index.html
+++ b/index.html
@@ -5,6 +5,52 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
+    <link rel="stylesheet" href="./fonts/fonts.css">
+    <link rel="stylesheet" href="./styles/global.css">
+    <link rel="stylesheet" href="./styles/style.css">
   </head>
-  <body></body>
+  <body>
+    <header>
+      <div class="header__menu">
+        <ul class="header__menu-list">
+          <li class="header__menu-list-item header__list-item_active">
+            <a href="#">главная</a>
+          </li class="header__menu-list-item">
+          <li>
+            <a href="#">посмотреть лоты</a>
+          </li>
+          <li class="header__menu-list-item">
+            <a href="#">об аукционе</a>
+          </li>
+        </ul>
+      </div>
+      <div class="header__logo">
+        <img class="header__logo-image" src="./images/logo-black.svg" alt="logo">
+      </div>
+      <address class="contacts header__contacts">
+        <a class="contacts-tel" href="">+9 999 555 5555</a>
+        <a class="contacts-email" href="">info@sobaka.ge</a>
+        <p class="contacts-address">наб. Принсенграхт 263-265, Амстердам</p>
+      </address>
+    </header>
+    <main>
+      <section class="title">
+        <div class="overlay title__overlay"></div>
+        <div class="title__text">
+          <h1>
+            <span class="accent-span">о<span class="accent-letter-spacing">но</span></span>
+            <span class="accent-span text-center">те<span class="accent-letter-spacing">бе</span></span>
+            <span class="accent-span text-end"><span class="accent-letter-spacing">н</span>ад<span class="accent-letter-spacing-none">о</span></span>
+          </h1>
+        </div>
+        <div class="title__discription">
+          <p class="title__description-text">Аукцион вещей, в которые никто не верил</p>
+          <button class="bet-button" href="#">Сделать ставку</button>
+        </div>
+      </section>
+    </main>
+    <footer>
+
+    </footer>
+  </body>
 </html>
