header and title HTML debug

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         <ul class="header__menu-list">
           <li class="header__menu-list-item header__list-item_active">
             <a href="#">главная</a>
-          </li class="header__menu-list-item">
-          <li>
+          </li>
+          <li class="header__menu-list-item">
             <a href="#">посмотреть лоты</a>
           </li>
           <li class="header__menu-list-item">
@@ -24,12 +24,12 @@
           </li>
         </ul>
       </div>
-      <div class="header__logo">
+      <a class="header__logo">
         <img class="header__logo-image" src="./images/logo-black.svg" alt="logo">
-      </div>
+      </a>
       <address class="contacts header__contacts">
-        <a class="contacts-tel" href="">+9 999 555 5555</a>
-        <a class="contacts-email" href="">info@sobaka.ge</a>
+        <a class="contacts-tel" href="tel:+99995555555">+9 999 555 5555</a>
+        <a class="contacts-email" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
         <p class="contacts-address">наб. Принсенграхт 263-265, Амстердам</p>
       </address>
     </header>
@@ -45,7 +45,7 @@
         </div>
         <div class="title__discription">
           <p class="title__description-text">Аукцион вещей, в которые никто не верил</p>
-          <button class="bet-button" href="#">Сделать ставку</button>
+          <button type="button" class="bet-button">Сделать ставку</button>
         </div>
       </section>
     </main>
