--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </header>
     <main>
       <section class="title">
-        <div class="overlay title__overlay"></div>
+        <div class="overlay"></div>
         <div class="title__text">
           <h1>
             <span class="accent-span">о<span class="accent-letter-spacing">но</span></span>
@@ -46,6 +46,35 @@
         <div class="title__discription">
           <p class="title__description-text">Аукцион вещей, в которые никто не верил</p>
           <button type="button" class="bet-button">Сделать ставку</button>
+        </div>
+      </section>
+      <section class="lots">
+        <div class="lots__header">
+          <h2>Лоты</h2>
+        </div>
+        <ul class="lots__card-list">
+          <li class="lots__card-list-item card_type_film">
+            <a class="card-link" href="#"></a>
+            <div class="overlay"></div>
+            <h3 class="card__title">Фильм режиссёра, который  бросил киношколу</h3>
+            <p class="card__text">Не просто бросил, а ушёл с первой лекции. Какой была бы ваша ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?</p>
+          </li>
+          <li class="lots__card-list-item card_type_book">
+            <a class="card-link" href="#"></a>
+            <div class="overlay"></div>
+            <h3 class="card__title">Книга, где описан один скучный день из жизни рекламного агента</h3>
+            <p class="card__text">Объёмом почти в тысячу страниц. Иногда без знаков препинания и с переходами на древнеанглийский. В ней одновременно рассказывается о 16 июня 1904 года и об истории литературы, начиная с античных времён. И это всё накладывается на эпическую поэму Гомера. Сколько бы вы поставили на «Улисса» Джеймса Джойса?</p>
+          </li>
+          <li class="lots__card-list-item card_type_picture">
+            <a class="card-link" href="#"></a>
+            <div class="overlay"></div>
+            <h3 class="card__title">Картина, которую повторит даже 5-летний сын маминой подруги</h3>
+            <p class="card__text">Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на инфузорию-туфельку. Никаких полей, лесов, котиков… Сколько бы вы на такое поставили, если бы не знали, что это — одна из революционных работ Кандинского?</p>
+            
+          </li>
+        </ul>
+        <div class="lots__more-information-link">
+          <a href="#">посмотреть больше</a>
         </div>
       </section>
     </main>
