--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <header>
-      <div class="header__menu">
+      <nav class="header__menu">
         <ul class="header__menu-list">
           <li class="header__menu-list-item header__list-item_active">
             <a href="#">главная</a>
@@ -23,8 +23,8 @@
             <a href="#">об аукционе</a>
           </li>
         </ul>
-      </div>
-      <a class="header__logo">
+      </nav>
+      <a class="header__logo" href="#">
         <img class="header__logo-image" src="./images/logo-black.svg" alt="logo">
       </a>
       <address class="contacts header__contacts">
@@ -45,6 +45,7 @@
         </div>
         <div class="title__discription">
           <p class="title__description-text">Аукцион вещей, в которые никто не верил</p>
+          <!-- Не уверен, что реализация через button самая семантически правильная.. -->
           <button type="button" class="bet-button">Сделать ставку</button>
         </div>
       </section>
@@ -70,16 +71,61 @@
             <div class="overlay"></div>
             <h3 class="card__title">Картина, которую повторит даже 5-летний сын маминой подруги</h3>
             <p class="card__text">Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на инфузорию-туфельку. Никаких полей, лесов, котиков… Сколько бы вы на такое поставили, если бы не знали, что это — одна из революционных работ Кандинского?</p>
-            
           </li>
         </ul>
         <div class="lots__more-information-link">
           <a href="#">посмотреть больше</a>
         </div>
       </section>
+      <section class="about">
+        <div class="about__logo">
+          <img class="about__logo-image" src="./images/logo-white.svg" alt="logo">
+        </div>
+        <div class="about__title">
+          <h2>Об аукционе</h2>
+        </div>
+        <div class="about__text">
+          <p>Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата. Наши лоты вообще не должны были попасть ни на один аукцион. Потому что кому нужен дневник девочки-подростка или картина, которую может нарисовать даже ребёнок? Кому нужны все эти странные вещи, созданные любителями?</p>
+          <p>Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах растерзанные критиками. Непринятые и непонятые. Когда-то они казались просто неудачными. Но, несмотря на критику, кажущуюся простоту или сложность, сейчас без этих лотов невозможно представить современную культуру. Когда в эти вещи не верил никто, продолжали верить их создатели. И сейчас эти лоты стали культовыми. </p>
+        </div>
+      </section>
     </main>
     <footer>
-
+      <address class="contacts footer__contacts">
+        <a class="contacts-tel" href="tel:+99995555555">+9 999 555 5555</a>
+        <a class="contacts-email" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+        <p class="contacts-address">наб. Принсенграхт 263-265, Амстердам</p>
+      </address>
+      <nav class="footer__menu">
+        <ul class="footer__menu-list">
+          <li class="footer__menu-list-item footer__list-item_active">
+            <a href="#">главная</a>
+          </li>
+          <li class="footer__menu-list-item">
+            <a href="#">посмотреть лоты</a>
+          </li>
+          <li class="footer__menu-list-item">
+            <a href="#">об аукционе</a>
+          </li>
+        </ul>
+      </nav>
+      <ul class="footer__social-list">
+        <li class="footer__social-list-item">
+          <a class="footer__social-link" href="#">
+            <img class="footer__social-icon" src="./images/yt.svg" alt="youtube">
+          </a>
+        </li>
+        <li class="footer__social-list-item">
+          <a class="footer__social-link" href="#">
+            <img class="footer__social-icon" src="./images/vk.svg" alt="vk">
+          </a>
+        </li>
+        <li class="footer__social-list-item">
+          <a class="footer__social-link" href="#">
+            <img class="footer__social-icon" src="./images/pinterest.svg" alt="pinterest">
+          </a>
+        </li>
+      </ul>
     </footer>
   </body>
 </html>
