--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
-    <link rel="stylesheet" href="./fonts/fonts.css">
-    <link rel="stylesheet" href="./styles/global.css">
-    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="./fonts/fonts.css" />
+    <link rel="stylesheet" href="./styles/global.css" />
+    <link rel="stylesheet" href="./styles/style.css" />
   </head>
   <body>
     <header>
@@ -25,11 +25,17 @@
         </ul>
       </nav>
       <a class="header__logo" href="#">
-        <img class="header__logo-image" src="./images/logo-black.svg" alt="logo">
+        <img
+          class="header__logo-image"
+          src="./images/logo-black.svg"
+          alt="logo"
+        />
       </a>
       <address class="contacts header__contacts">
         <a class="contacts-tel" href="tel:+99995555555">+9 999 555 5555</a>
-        <a class="contacts-email" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+        <a class="contacts-email" href="mailto:info@sobaka.ge"
+          >info@sobaka.ge</a
+        >
         <p class="contacts-address">наб. Принсенграхт 263-265, Амстердам</p>
       </address>
     </header>
@@ -38,13 +44,24 @@
         <div class="overlay"></div>
         <div class="title__text">
           <h1>
-            <span class="accent-span">о<span class="accent-letter-spacing">но</span></span>
-            <span class="accent-span text-center">те<span class="accent-letter-spacing">бе</span></span>
-            <span class="accent-span text-end"><span class="accent-letter-spacing">н</span>ад<span class="accent-letter-spacing-none">о</span></span>
+            <span class="accent-span"
+              >о<span class="accent-letter-spacing">но</span></span
+            >
+            <span class="accent-span text-center"
+              >те<span class="accent-letter-spacing">бе</span></span
+            >
+            <span class="accent-span text-end"
+              ><span class="accent-letter-spacing">н</span>ад<span
+                class="accent-letter-spacing-none"
+                >о</span
+              ></span
+            >
           </h1>
         </div>
         <div class="title__discription">
-          <p class="title__description-text">Аукцион вещей, в которые никто не верил</p>
+          <p class="title__description-text">
+            Аукцион вещей, в которые никто не верил
+          </p>
           <!-- Не уверен, что реализация через button самая семантически правильная.. -->
           <button type="button" class="bet-button">Сделать ставку</button>
         </div>
@@ -57,20 +74,40 @@
           <li class="lots__card-list-item card_type_film">
             <a class="card-link" href="#"></a>
             <div class="overlay"></div>
-            <h3 class="card__title">Фильм режиссёра, который  бросил киношколу</h3>
-            <p class="card__text">Не просто бросил, а ушёл с первой лекции. Какой была бы ваша ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?</p>
+            <h3 class="card__title">
+              Фильм режиссёра, который бросил киношколу
+            </h3>
+            <p class="card__text">
+              Не просто бросил, а ушёл с первой лекции. Какой была бы ваша
+              ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?
+            </p>
           </li>
           <li class="lots__card-list-item card_type_book">
             <a class="card-link" href="#"></a>
             <div class="overlay"></div>
-            <h3 class="card__title">Книга, где описан один скучный день из жизни рекламного агента</h3>
-            <p class="card__text">Объёмом почти в тысячу страниц. Иногда без знаков препинания и с переходами на древнеанглийский. В ней одновременно рассказывается о 16 июня 1904 года и об истории литературы, начиная с античных времён. И это всё накладывается на эпическую поэму Гомера. Сколько бы вы поставили на «Улисса» Джеймса Джойса?</p>
+            <h3 class="card__title">
+              Книга, где описан один скучный день из жизни рекламного агента
+            </h3>
+            <p class="card__text">
+              Объёмом почти в тысячу страниц. Иногда без знаков препинания и с
+              переходами на древнеанглийский. В ней одновременно рассказывается
+              о 16 июня 1904 года и об истории литературы, начиная с античных
+              времён. И это всё накладывается на эпическую поэму Гомера. Сколько
+              бы вы поставили на «Улисса» Джеймса Джойса?
+            </p>
           </li>
           <li class="lots__card-list-item card_type_picture">
             <a class="card-link" href="#"></a>
             <div class="overlay"></div>
-            <h3 class="card__title">Картина, которую повторит даже 5-летний сын маминой подруги</h3>
-            <p class="card__text">Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на инфузорию-туфельку. Никаких полей, лесов, котиков… Сколько бы вы на такое поставили, если бы не знали, что это — одна из революционных работ Кандинского?</p>
+            <h3 class="card__title">
+              Картина, которую повторит даже 5-летний сын маминой подруги
+            </h3>
+            <p class="card__text">
+              Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то
+              похожее на инфузорию-туфельку. Никаких полей, лесов, котиков…
+              Сколько бы вы на такое поставили, если бы не знали, что это — одна
+              из революционных работ Кандинского?
+            </p>
           </li>
         </ul>
         <div class="lots__more-information-link">
@@ -79,21 +116,40 @@
       </section>
       <section class="about">
         <div class="about__logo">
-          <img class="about__logo-image" src="./images/logo-white.svg" alt="logo">
+          <img
+            class="about__logo-image"
+            src="./images/logo-white.svg"
+            alt="logo"
+          />
         </div>
         <div class="about__title">
           <h2>Об аукционе</h2>
         </div>
         <div class="about__text">
-          <p>Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата. Наши лоты вообще не должны были попасть ни на один аукцион. Потому что кому нужен дневник девочки-подростка или картина, которую может нарисовать даже ребёнок? Кому нужны все эти странные вещи, созданные любителями?</p>
-          <p>Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах растерзанные критиками. Непринятые и непонятые. Когда-то они казались просто неудачными. Но, несмотря на критику, кажущуюся простоту или сложность, сейчас без этих лотов невозможно представить современную культуру. Когда в эти вещи не верил никто, продолжали верить их создатели. И сейчас эти лоты стали культовыми. </p>
+          <p>
+            Здесь вы не встретите очередное пафосное собрание невероятно
+            дорогого антиквариата. Наши лоты вообще не должны были попасть ни на
+            один аукцион. Потому что кому нужен дневник девочки-подростка или
+            картина, которую может нарисовать даже ребёнок? Кому нужны все эти
+            странные вещи, созданные любителями?
+          </p>
+          <p>
+            Слишком сложные или, наоборот, слишком простые. Опережающие своё
+            время. В пух и прах растерзанные критиками. Непринятые и непонятые.
+            Когда-то они казались просто неудачными. Но, несмотря на критику,
+            кажущуюся простоту или сложность, сейчас без этих лотов невозможно
+            представить современную культуру. Когда в эти вещи не верил никто,
+            продолжали верить их создатели. И сейчас эти лоты стали культовыми.
+          </p>
         </div>
       </section>
     </main>
     <footer>
       <address class="contacts footer__contacts">
         <a class="contacts-tel" href="tel:+99995555555">+9 999 555 5555</a>
-        <a class="contacts-email" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+        <a class="contacts-email" href="mailto:info@sobaka.ge"
+          >info@sobaka.ge</a
+        >
         <p class="contacts-address">наб. Принсенграхт 263-265, Амстердам</p>
       </address>
       <nav class="footer__menu">
@@ -112,17 +168,25 @@
       <ul class="footer__social-list">
         <li class="footer__social-list-item">
           <a class="footer__social-link" href="#">
-            <img class="footer__social-icon" src="./images/yt.svg" alt="youtube">
+            <img
+              class="footer__social-icon"
+              src="./images/yt.svg"
+              alt="youtube"
+            />
           </a>
         </li>
         <li class="footer__social-list-item">
           <a class="footer__social-link" href="#">
-            <img class="footer__social-icon" src="./images/vk.svg" alt="vk">
+            <img class="footer__social-icon" src="./images/vk.svg" alt="vk" />
           </a>
         </li>
         <li class="footer__social-list-item">
           <a class="footer__social-link" href="#">
-            <img class="footer__social-icon" src="./images/pinterest.svg" alt="pinterest">
+            <img
+              class="footer__social-icon"
+              src="./images/pinterest.svg"
+              alt="pinterest"
+            />
           </a>
         </li>
       </ul>
