--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <img
           class="header__logo-image"
           src="./images/logo-black.svg"
-          alt="logo"
+          alt="Логотип"
         />
       </a>
       <address class="contacts header__contacts">
@@ -119,7 +119,7 @@
           <img
             class="about__logo-image"
             src="./images/logo-white.svg"
-            alt="logo"
+            alt="Логотип"
           />
         </div>
         <div class="about__title">
@@ -171,13 +171,13 @@
             <img
               class="footer__social-icon"
               src="./images/yt.svg"
-              alt="youtube"
+              alt="YouTube"
             />
           </a>
         </li>
         <li class="footer__social-list-item">
           <a class="footer__social-link" href="#">
-            <img class="footer__social-icon" src="./images/vk.svg" alt="vk" />
+            <img class="footer__social-icon" src="./images/vk.svg" alt="ВКонтакте" />
           </a>
         </li>
         <li class="footer__social-list-item">
@@ -185,7 +185,7 @@
             <img
               class="footer__social-icon"
               src="./images/pinterest.svg"
-              alt="pinterest"
+              alt="Pinterest"
             />
           </a>
         </li>
