--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
         />
       </a>
       <address class="contacts header__contacts">
-        <a class="contacts-tel" href="tel:+99995555555">+9 999 555 5555</a>
-        <a class="contacts-email" href="mailto:info@sobaka.ge"
+        <a href="tel:+99995555555">+9 999 555 5555</a>
+        <a href="mailto:info@sobaka.ge"
           >info@sobaka.ge</a
         >
         <p class="contacts-address">наб. Принсенграхт 263-265, Амстердам</p>
@@ -62,57 +62,55 @@
           <p class="title__description-text">
             Аукцион вещей, в которые никто не верил
           </p>
-          <!-- Не уверен, что реализация через button самая семантически правильная.. -->
           <button type="button" class="bet-button">Сделать ставку</button>
         </div>
       </section>
       <section class="lots">
-        <div class="lots__header">
-          <h2>Лоты</h2>
-        </div>
+        <h2 class="lots__header">Лоты</h2>
         <ul class="lots__card-list">
           <li class="lots__card-list-item card_type_film">
-            <a class="card-link" href="#"></a>
-            <div class="overlay"></div>
-            <h3 class="card__title">
-              Фильм режиссёра, который бросил киношколу
-            </h3>
-            <p class="card__text">
-              Не просто бросил, а ушёл с первой лекции. Какой была бы ваша
-              ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?
-            </p>
+            <a class="card-link" href="#">
+              <div class="overlay"></div>
+              <h3 class="card__title">
+                Фильм режиссёра, который бросил киношколу
+              </h3>
+              <p class="card__text">
+                Не просто бросил, а ушёл с первой лекции. Какой была бы ваша
+                ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?
+              </p>
+            </a>
           </li>
           <li class="lots__card-list-item card_type_book">
-            <a class="card-link" href="#"></a>
-            <div class="overlay"></div>
-            <h3 class="card__title">
-              Книга, где описан один скучный день из жизни рекламного агента
-            </h3>
-            <p class="card__text">
-              Объёмом почти в тысячу страниц. Иногда без знаков препинания и с
-              переходами на древнеанглийский. В ней одновременно рассказывается
-              о 16 июня 1904 года и об истории литературы, начиная с античных
-              времён. И это всё накладывается на эпическую поэму Гомера. Сколько
-              бы вы поставили на «Улисса» Джеймса Джойса?
-            </p>
+            <a class="card-link" href="#">
+              <div class="overlay"></div>
+              <h3 class="card__title">
+                Книга, где описан один скучный день из жизни рекламного агента
+              </h3>
+              <p class="card__text">
+                Объёмом почти в тысячу страниц. Иногда без знаков препинания и с
+                переходами на древнеанглийский. В ней одновременно рассказывается
+                о 16 июня 1904 года и об истории литературы, начиная с античных
+                времён. И это всё накладывается на эпическую поэму Гомера. Сколько
+                бы вы поставили на «Улисса» Джеймса Джойса?
+              </p>
+            </a>
           </li>
           <li class="lots__card-list-item card_type_picture">
-            <a class="card-link" href="#"></a>
-            <div class="overlay"></div>
-            <h3 class="card__title">
-              Картина, которую повторит даже 5-летний сын маминой подруги
-            </h3>
-            <p class="card__text">
-              Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то
-              похожее на инфузорию-туфельку. Никаких полей, лесов, котиков…
-              Сколько бы вы на такое поставили, если бы не знали, что это — одна
-              из революционных работ Кандинского?
-            </p>
+            <a class="card-link" href="#">
+              <div class="overlay"></div>
+              <h3 class="card__title">
+                Картина, которую повторит даже 5-летний сын маминой подруги
+              </h3>
+              <p class="card__text">
+                Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то
+                похожее на инфузорию-туфельку. Никаких полей, лесов, котиков…
+                Сколько бы вы на такое поставили, если бы не знали, что это — одна
+                из революционных работ Кандинского?
+              </p>
+            </a>
           </li>
         </ul>
-        <div class="lots__more-information-link">
-          <a href="#">посмотреть больше</a>
-        </div>
+        <a class="lots__more-information-link" href="#">посмотреть больше</a>
       </section>
       <section class="about">
         <div class="about__logo">
@@ -122,9 +120,7 @@
             alt="Логотип"
           />
         </div>
-        <div class="about__title">
-          <h2>Об аукционе</h2>
-        </div>
+          <h2 class="about__title">Об аукционе</h2>
         <div class="about__text">
           <p>
             Здесь вы не встретите очередное пафосное собрание невероятно
@@ -146,8 +142,8 @@
     </main>
     <footer>
       <address class="contacts footer__contacts">
-        <a class="contacts-tel" href="tel:+99995555555">+9 999 555 5555</a>
-        <a class="contacts-email" href="mailto:info@sobaka.ge"
+        <a href="tel:+99995555555">+9 999 555 5555</a>
+        <a href="mailto:info@sobaka.ge"
           >info@sobaka.ge</a
         >
         <p class="contacts-address">наб. Принсенграхт 263-265, Амстердам</p>
